--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "tsnd --respawn index.ts",
     "saveMaps": "ts-node saveMaps.ts",
     "saveNpcs": "ts-node saveNpcs.ts",
-    "convertPNG": "ts-node b64ToPng.ts"
+    "convertPNG": "ts-node b64ToPng.ts",
+    "convertSVG": "ts-node pngToSvg.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "node-fetch": "^2.6.7",
+    "svg-png-converter": "^0.0.9",
     "svg-points": "^6.0.1",
     "zod": "^3.20.2"
   },
