--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^5.3.4",
     "node-fetch": "^2.6.7",
     "slug": "^8.2.2",
     "svg-png-converter": "^0.0.9",
