--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "generate_c1": "ts-node generate_c1.ts",
+    "generate_c3": "ts-node generate_c3.ts",
     "server": "tsnd --respawn server.ts",
     "dev": "ts-node index.ts",
     "saveProf": "ts-node saveClasses.ts",
