--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "generate_c3": "ts-node generate_c3.ts",
     "server": "tsnd --respawn server.ts",
     "dev": "ts-node index.ts",
+    "test": "ts-node test.ts",
     "saveProf": "ts-node saveClasses.ts",
     "saveMaps": "ts-node saveMaps.ts",
     "saveNpcs": "ts-node saveNpcs.ts",
