--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "generate_pos": "ts-node generate_pos.ts",
     "generate_c1": "ts-node generate_c1.ts",
     "generate_c3": "ts-node generate_c3.ts",
+    "generate_c6": "ts-node generate_c6.ts",
     "server": "tsnd --respawn server.ts",
     "dev": "ts-node index.ts",
     "test": "ts-node test.ts",
