--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate_skills": "ts-node generate_skills.ts",
     "server": "tsnd --respawn server.ts",
     "dev": "ts-node index.ts",
-    "test": "ts-node test.ts",
+    "test": "ts-node zod.ts",
     "saveProf": "ts-node saveClasses.ts",
     "saveMaps": "ts-node saveMaps.ts",
     "saveNpcs": "ts-node saveNpcs.ts",
