--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mathjs": "^12.0.0",
+    "nanoid": "^5.0.7",
     "node-fetch": "^2.6.7",
     "slug": "^8.2.2",
     "svg-png-converter": "^0.0.9",
