--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "data": "ts-node datapack.ts",
     "generate_pos": "ts-node generate_pos.ts",
     "generate_c1": "ts-node generate_c1.ts",
     "generate_c3": "ts-node generate_c3.ts",
