--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "slug": "^8.2.2",
     "svg-png-converter": "^0.0.9",
     "svg-points": "^6.0.1",
+    "xml2js": "^0.6.2",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/node-fetch": "^2.6.2",
     "@types/slug": "^5.0.3",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "@types/xml2js": "^0.4.14"
   }
 }
