--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@types/lodash": "^4.14.194",
     "@types/node-fetch": "^2.6.2",
     "@types/slug": "^5.0.3",
+    "@types/xml2js": "^0.4.14",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "@types/xml2js": "^0.4.14"
+    "ts-node-dev": "^2.0.0"
   }
 }
